tests/fixtures/errors/invalid_preproc_json_assignment.puml
@startuml
!$foo = { "name": "John" }
Alice -> Bob: unreachable
@enduml
